<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsb.cs.cs185.idarvis.idarvisflashcards.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/titlespace"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/double_default"
        android:text="@string/app_name"
        android:textSize="@dimen/app" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/titlespace"
        android:orientation="horizontal"
        android:padding="@dimen/default_dimen" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/titlespace"
            android:orientation="vertical"
            android:padding="@dimen/default_dimen" >

            <Button
                android:id="@+id/newbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="NewCard"
                android:text="@string/newcard" />

            <Button
                android:id="@+id/editbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="EditCard"
                android:text="@string/edit" />

            <Button
                android:id="@+id/searchbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="SearchCard"
                android:text="@string/search" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>