<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_dimen"
    android:paddingRight="@dimen/default_dimen"
    tools:context="edu.ucsb.cs.cs185.idarvis.idarvisflashcards.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/default_dimen"
        android:paddingRight="@dimen/default_dimen"
        android:paddingTop="@dimen/linemargin" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="@dimen/cardtitle" >
        </TextView>

        <EditText
            android:id="@+id/cardname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cardtitle"
            android:inputType="text"
            android:textSize="@dimen/cardlist" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/linemargin"
        android:paddingLeft="@dimen/default_dimen"
        android:paddingRight="@dimen/default_dimen" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="@dimen/cardtitle" >
        </TextView>

        <EditText
            android:id="@+id/subjectname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjecttitle"
            android:inputType="text"
            android:textSize="@dimen/cardlist" >
        </EditText>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line"
        android:background="@color/red" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_dimen"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_dimen"
            android:paddingLeft="@dimen/default_dimen"
            android:paddingRight="@dimen/default_dimen" >

            <LinearLayout
                android:id="@+id/add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:onClick="AddSection"
                android:text="@string/add" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>