<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_dimen"
    tools:context="edu.ucsb.cs.cs185.idarvis.idarvisflashcards.MainActivity"
    tools:ignore="MergeRootFrame" >

    
        <Button
            android:id="@+id/camera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_dimen"
            android:text="@string/camera"
            android:textSize="@dimen/cardlist" >
        </Button>
        
       <!--  <Button
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_dimen"
            android:text="@string/date"
            android:textSize="@dimen/cardlist" >
        </Button>
         -->
        <Button
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_dimen"
            android:text="@string/text"
            android:textSize="@dimen/cardlist" >
        </Button>
        
         <Button
            android:id="@+id/Negative"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_dimen"
            android:text="@string/cancel"
            android:textSize="@dimen/cardlist" >
        </Button>


</LinearLayout>