<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_dimen"
    android:paddingRight="@dimen/default_dimen"
    tools:context="edu.ucsb.cs.cs185.idarvis.idarvisflashcards.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_dimen"
        android:text="@string/canceltext" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_dimen" >

        <Button
            android:id="@+id/yes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightblue"
            android:padding="@dimen/default_dimen"
            android:text="@string/yes"
            android:textSize="@dimen/cardlist" >
        </Button>

        <View
            android:layout_width="@dimen/linemargin"
            android:layout_height="fill_parent"
           />

        <Button
            android:id="@+id/no"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightgrey"
            android:text="@string/no"
            android:padding="@dimen/default_dimen"
            android:textSize="@dimen/cardlist" >
        </Button>
    </LinearLayout>

</LinearLayout>